content/versioned/2.5/reference/troubleshooting.mdx
---
title: Troubleshooting
description: Common build, packaging, signing, and runtime problems in Nucleus, with the cause and fix for each.
---

This page lists recurring problems when building, packaging, signing, and shipping a
Nucleus app. Entries are grouped by area, and each one states the symptom, the cause, and
the fix.

## macOS signing and notarization

### Notarization fails: "does not include a secure timestamp"

**Symptom.** `xcrun notarytool submit` returns `Invalid` with a status detail about a
missing or invalid timestamp.

**Cause.** Code signing ran without `--timestamp`, or the machine could not reach Apple's
timestamp server at sign time.

**Fix.** Nucleus signs with `--options runtime --timestamp` by default. If you added a
custom `codesign` step (for example, to sign `lipo`-merged universal binaries outside the
`build-macos-universal` action), pass `--timestamp` and re-sign. Verify with
`codesign -dv --verbose=4 <Your.app>` and check for a `Timestamp=` entry.

### Notarization fails: "does not include a hardened runtime"

**Symptom.** `Status: Invalid`, with the log referencing the hardened runtime.

**Cause.** A custom `codesign` step is missing `--options runtime`.

**Fix.** Add `--options runtime` to every `codesign` invocation. The default Nucleus
pipeline already does this, so only custom CI scripts hit this error.

### Notarization fails: "code object is not signed at all"

**Symptom.** `packageGraalvmDmg` (or `notarizeGraalvmDmg`) with
`compose.desktop.mac.sign=true` aborts with
`code object is not signed at all` in subcomponent
`<App>.app/Contents/MacOS/.nucleus-executable-type`. Or the bundle notarizes, but
`spctl -a -t exec` answers a bare `rejected`.

**Cause.** Before 2.5.17, GraalVM bundles put non-code files under `Contents/MacOS/`: the
executable-type marker and `lib/fontconfig.bfc`. `codesign` treats every file there as
nested code, and Gatekeeper rejects non-Mach-O files anywhere under `Contents/MacOS/`. The
GraalVM dylibs there also kept their ad-hoc signature.

**Fix.** Upgrade to 2.5.17 or later. The marker and `fontconfig.bfc` now live in
`Contents/Resources/`, and every dylib under `Contents/MacOS/` is re-signed with your
Developer ID. Files you add through `appResourcesRootDir` still land in `Contents/MacOS/`
on macOS — ship only Mach-O binaries there, or Gatekeeper rejects the notarized bundle the
same way.

## Microsoft Store

### Upload rejected: "MinVersion &lt;= 10.0.17134.0"

**Symptom.** Partner Center rejects the upload:

> Package acceptance validation error: bundle is not valid. You can't upload
> msix/msixbundle/msixupload packages that target Windows with a
> MinVersion &lt;= 10.0.17134.0.

**Cause.** No explicit `minVersion` is set in `appx { }`. The default is `10.0.14316.0`,
which is below the Store's floor.

**Fix.** Set a `minVersion` at or above the Store's floor:

```kotlin title="build.gradle.kts"
appx {
    minVersion = "10.0.17763.0"        // Windows 10 1809
    maxVersionTested = "10.0.22621.0"  // Windows 11 22H2
}
```

### Upload rejected: publisher or identity mismatch

**Symptom.** Upload validation fails with an identity mismatch.

**Cause.** `identityName`, `publisher`, or `publisherDisplayName` do not match the Partner
Center reservation.

**Fix.** Copy the exact values from Partner Center under Product identity. `publisher` is
the `CN=<GUID>` issued by the Store, not the CN of your local signing certificate. See
[Windows targets](/docs/packaging/windows).

## Networking

### SSLHandshakeException on a corporate network

**Symptom.** HTTPS calls from the app fail with
`SSLHandshakeException: PKIX path building failed`.

**Cause.** A corporate proxy or VPN gateway intercepts TLS with a private root CA that the
bundled JDK trust store does not know.

**Fix.** Use either approach, or both.

Ship the CA inside the bundled JDK's `cacerts` at build time:

```kotlin title="build.gradle.kts"
nativeDistributions {
    trustedCertificates.from(files("certs/corp-ca.pem"))
}
```

See [trusted certificates](/docs/packaging/trusted-certificates).

Or route HTTPS through the OS trust store at runtime with `native-ssl` and `native-http`:

```kotlin title="build.gradle.kts"
implementation("dev.nucleusframework:nucleus.native-ssl:<version>")
implementation("dev.nucleusframework:nucleus.native-http:<version>")
```

`NativeHttpClient.create()` returns a `java.net.http.HttpClient` backed by the OS trust
store. For OkHttp or Ktor, use the `nucleus.native-http-okhttp` and
`nucleus.native-http-ktor` integrations.

## Auto-update

### "no matching file" on macOS

**Symptom.** A check returns `UpdateResult.Error` wrapping a `NoMatchingFileException` on
macOS.

**Cause.** The release contains only a `.dmg`. Auto-update on macOS downloads a ZIP.

**Fix.** Add `TargetFormat.Zip` alongside `TargetFormat.Dmg`. Both belong in the same
release, and `latest-mac.yml` references both. See [auto-update](/docs/packaging/auto-update).

## GraalVM native image

### ClassNotFoundException or NoSuchMethodError at runtime

**Symptom.** The app runs on the JVM but crashes under `native-image` with reflection
errors or missing methods.

**Cause.** GraalVM uses closed-world analysis. Reflection, resources, and dynamic proxies
must be registered ahead of time.

**Fix.** The Nucleus plugin ships GraalVM reachability metadata for itself, FileKit, and
other common libraries (see [automatic metadata](/docs/performance/graalvm/automatic-metadata)).
For your own code:

1. Run with `-agentlib:native-image-agent=config-output-dir=...` on a representative
   workload.
2. Commit the generated `reachability-metadata.json` next to `META-INF/native-image/`.

For unsupported libraries, see [GraalVM configuration](/docs/performance/graalvm/configuration).

## Linux packaging

### AppImage takes about 60 seconds to start

**Symptom.** The app opens quickly in development but takes about a minute when packaged
as an AppImage.

**Cause.** `compressionLevel = CompressionLevel.Maximum` or `Ultra`. AppImage uses squashfs,
and maximum compression triggers FUSE decompression on every launch.

**Fix.** Use `CompressionLevel.Normal` (the default) for AppImage. Prefer a format-local
override so DEB/DMG can stay on a higher global level:

```kotlin title="build.gradle.kts"
nativeDistributions {
    compressionLevel = CompressionLevel.Ultra
    linux {
        appImage {
            compressionLevel = CompressionLevel.Normal
        }
    }
}
```

### DEB or RPM fails: "Please specify project homepage"

**Symptom.** `packageDeb` or `packageGraalvmDeb` fails immediately.

**Cause.** Unlike jpackage, electron-builder requires `homepage` for DEB.

**Fix.** Set the homepage on the distribution:

```kotlin title="build.gradle.kts"
nativeDistributions {
    homepage = "https://myapp.example.com"
}
```

### Flatpak task skips silently

**Symptom.** `packageFlatpak` reports "skipped" with no error.

**Cause.** `flatpak-builder` or the `org.freedesktop.Platform//23.08` runtime is missing
on the build host.

**Fix.** Install the tooling and runtime:

```shell
sudo apt-get install -y flatpak flatpak-builder
flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
flatpak install -y flathub org.freedesktop.Platform//23.08
flatpak install -y flathub org.freedesktop.Sdk//23.08
```

In CI, use `setup-nucleus` with `flatpak: 'true'`.

### Snap fails: "snapcraft: command not found"

**Symptom.** `packageSnap` fails before producing anything.

**Cause.** `snapd` or `snapcraft` is missing on the build host.

**Fix.** Install both:

```shell
sudo apt-get install -y snapd
sudo snap install snapcraft --classic
```

In CI, use `setup-nucleus` with `snap: 'true'`.

## Native libraries

### Module reports `isAvailable == false` or silent no-ops

**Symptom.** System tray, system color, notifications, or another OS-integration module
does nothing on a platform where you expect it to work. Public APIs return `null` /
`false`, or `isAvailable` is `false`.

**Cause.** The JNI shared library for that module did not load. Common reasons: no binary
for this OS/arch in the dependency JAR, the module is missing from the runtime classpath,
or extraction into the content-addressed cache failed.

**Fix.** Confirm the module dependency is on the runtime classpath and that the JAR
contains `/nucleus/native/<os>-<arch>/…` for your platform. Clear the loader cache and
relaunch if an upgrade left a partial extract:

| Platform | Cache path |
|----------|------------|
| macOS | `~/Library/Caches/nucleus/native/` |
| Linux | `~/.cache/nucleus/native/` (or `$XDG_CACHE_HOME/nucleus/native/`) |
| Windows | `%LOCALAPPDATA%\nucleus\native\` |

See [Native library loader](/docs/performance/native-library-loader) for the full load
order, JAR layout, and sidecar rules.

### Native library fails to load on an older Linux distribution

**Symptom.** On Ubuntu 22.04, Debian 12, Devuan 5, or another distribution older than
Ubuntu 24.04, the app crashes at launch or a module reports `isAvailable == false`. stderr
shows `version 'GLIBC_2.3x' not found` for a `libnucleus_*.so` library.

**Cause.** Up to 2.5.17 the Linux natives were built on `ubuntu-latest` (Ubuntu 24.04), so
they required glibc 2.39.

**Fix.** Upgrade to 2.5.18 or later. The natives are built on Ubuntu 22.04 and need
glibc 2.35 or newer. Check your system's version with `ldd --version`.

## Rendering

### Wayland on NVIDIA: black window or garbled output

**Symptom.** The Compose UI renders incorrectly under Wayland on NVIDIA drivers.

**Cause.** NVIDIA's GBM and EGLStream support for Wayland is inconsistent, and Compose
Desktop on the AWT/JBR backend does not handle it reliably.

**Fix.** Switch to the [Tao backend](/docs/tao). `decorated-window-tao` renders through
native Skia surfaces on Wayland without going through AWT. To stay on AWT, set
`WLR_NO_HARDWARE_CURSORS=1` or run under XWayland.

### Crash on launch with an older Linux GPU

**Symptom.** A Tao window aborts at open on Linux. stderr mentions a failed GL 3.3 context,
or the process exits from `TaoComposeSceneHostLinux` with a `require()` failure.

**Cause.** Linux EGL attach used to request only a GL 3.3 **compatibility** profile. Some
drivers (Mesa r600 on AMD RV610, for example) cap the compat profile at 3.0 while the
**core** profile reaches 3.3, so the request could never succeed and the window aborted.

**Fix.** Upgrade to 2.5.16 or later. Attach now tries 3.3 compat, then 3.3 core, then Mesa
llvmpipe (`LIBGL_ALWAYS_SOFTWARE=1`, one-shot, skipped if you already set that variable).
Both fallbacks log one line on stderr. Hardware that already accepts the compat request is
unchanged. Force software rendering yourself with `LIBGL_ALWAYS_SOFTWARE=1` if you want
llvmpipe without waiting for the fallback.

## Migration to 2.0

### Unresolved reference 'JewelDecoratedWindow'

**Symptom.** The import is correct and the IDE resolves the function, but compilation
fails.

**Cause.** In 2.0, the composable is an extension on `NucleusApplicationScope`. A wrapper
composable written for 1.x does not propagate the receiver.

**Fix.** Make your wrapper an extension as well:

```kotlin
fun NucleusApplicationScope.MyOnboardingWindow() {
    JewelDecoratedWindow(/* ... */) { /* content */ }
}
```

See [migrate from 1.x](/docs/migrate/from-1.x).

### NoClassDefFoundError: DecoratedDialogKt on Tao

**Symptom.** The dialog crashes on Tao but works on AWT.

**Cause.** The code calls the AWT-only `JewelDecoratedDialog` (no receiver) under
`NucleusBackend.Tao`.

**Fix.** Make the host composable an extension on `NucleusApplicationScope` so the call
resolves to `NucleusApplicationScope.JewelDecoratedDialog`, which dispatches per backend.

### Dependency requires JVM runtime version 11

**Symptom.** Gradle fails to resolve the Jewel artifact with a message about JVM runtime
version 11.

**Cause.** The toolchain is not set to 25.

**Fix.** Set the Kotlin JVM toolchain:

```kotlin title="build.gradle.kts"
kotlin { jvmToolchain(25) }
```

See [migrate from 1.x](/docs/migrate/from-1.x).

## What's next

- [Packaging](/docs/packaging) — per-OS packaging, signing, and store targets.
- [Performance](/docs/performance) — GraalVM native image and AOT details.
- [Migrate from 1.x](/docs/migrate/from-1.x) — namespace and scope changes after upgrading.
